--- a/BSMM2/BSMM2/Views/PlayersPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayersPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BSMM2.Views.PlayersPage"
-              Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 x:Class="BSMM2.Views.PlayersPage"
+			  Title="{Binding Title}"
+			 x:Name="BrowseItemsPage">
 	<ContentPage.ToolbarItems>
 		<ToolbarItem Text="NewGame" Clicked="NewGame_Clicked" Order="Secondary">
 			<ToolbarItem.Icon>
@@ -12,30 +12,45 @@
 				</OnPlatform>
 			</ToolbarItem.Icon>
 		</ToolbarItem>
+		<ToolbarItem Text="DeleteGame" Clicked="NewGame_Clicked" Order="Secondary">
+			<ToolbarItem.Icon>
+				<OnPlatform x:TypeArguments="FileImageSource">
+					<On Platform="UWP" Value="add.png" />
+				</OnPlatform>
+			</ToolbarItem.Icon>
+		</ToolbarItem>
+		<ToolbarItem Text="SelectGame" Clicked="NewGame_Clicked" Order="Secondary">
+			<ToolbarItem.Icon>
+				<OnPlatform x:TypeArguments="FileImageSource">
+					<On Platform="UWP" Value="add.png" />
+				</OnPlatform>
+			</ToolbarItem.Icon>
+		</ToolbarItem>
+		<ToolbarItem Text="AddPlayer" Clicked="NewGame_Clicked" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<StackLayout>
 			<ListView x:Name="PlayersListView"
-                ItemsSource="{Binding Players}"
-                VerticalOptions="FillAndExpand"
-                 HasUnevenRows="true"
-                 RefreshCommand="{Binding LoadPlayersCommand}"
-                 IsPullToRefreshEnabled="true"
-                 IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                 CachingStrategy="RecycleElement"
-                 ItemSelected="OnPlayerSelected">
+				ItemsSource="{Binding Players}"
+				VerticalOptions="FillAndExpand"
+				 HasUnevenRows="true"
+				 RefreshCommand="{Binding LoadPlayersCommand}"
+				 IsPullToRefreshEnabled="true"
+				 IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+				 CachingStrategy="RecycleElement"
+				 ItemSelected="OnPlayerSelected">
 				<ListView.ItemTemplate>
 					<DataTemplate>
 						<ViewCell>
 							<StackLayout Padding="10">
 								<Label Text="{Binding Text}"
-                       LineBreakMode="NoWrap"
-                       Style="{DynamicResource ListItemTextStyle}"
-                       FontSize="16" />
+					   LineBreakMode="NoWrap"
+					   Style="{DynamicResource ListItemTextStyle}"
+					   FontSize="16" />
 								<Label Text="{Binding Description}"
-                       LineBreakMode="NoWrap"
-                       Style="{DynamicResource ListItemDetailTextStyle}"
-                       FontSize="13" />
+					   LineBreakMode="NoWrap"
+					   Style="{DynamicResource ListItemDetailTextStyle}"
+					   FontSize="13" />
 							</StackLayout>
 						</ViewCell>
 					</DataTemplate>
