--- a/BSMM2/BSMM2/Views/MainPage.xaml
+++ b/BSMM2/BSMM2/Views/MainPage.xaml
@@ -14,7 +14,16 @@
 				<views:PlayersPage />
 			</x:Arguments>
 		</NavigationPage>
-
+		<NavigationPage Title="Round">
+			<NavigationPage.Icon>
+				<OnPlatform x:TypeArguments="FileImageSource">
+					<On Platform="iOS" Value="tab_feed.png" />
+				</OnPlatform>
+			</NavigationPage.Icon>
+			<x:Arguments>
+				<views:RoundPage />
+			</x:Arguments>
+		</NavigationPage>
 		<NavigationPage Title="Item">
 			<NavigationPage.Icon>
 				<OnPlatform x:TypeArguments="FileImageSource">
