Implementing UI Flow

--- a/BSMM2/BSMM2/Views/NewGamePage.xaml
+++ b/BSMM2/BSMM2/Views/NewGamePage.xaml
@@ -8,7 +8,7 @@
 		<local:PlayerControlConverter x:Key="PlayerControlConverter" />
 	</ContentPage.Resources>
 	<ContentPage.ToolbarItems>
-		<ToolbarItem Text="Create" Clicked="Create_Clicked" />
+		<ToolbarItem Text="New Game" Clicked="NewGame_Clicked" Order="Primary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<StackLayout>
