--- a/BSMM2/BSMM2/Views/Matches/SingleMatchPage.xaml
+++ b/BSMM2/BSMM2/Views/Matches/SingleMatchPage.xaml
@@ -14,6 +14,9 @@
 				ItemDisplayBinding="{Binding Name}">
 			</Picker>
 			<Editor Text="{Binding LifePoint2}" Keyboard="Numeric" Margin="0"  IsVisible="{Binding Game.EnableLifePoint}" />
+			<StackLayout Orientation="Horizontal" VerticalOptions="End">
+				<Button Text="Done" Command="{Binding DoneCommand}" HorizontalOptions="CenterAndExpand"></Button>
+			</StackLayout>
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
