--- a/BSMM2/BSMM2/Views/Matches/SingleMatchPage.xaml
+++ b/BSMM2/BSMM2/Views/Matches/SingleMatchPage.xaml
@@ -6,17 +6,19 @@
 			 Title="{Binding Title}">
 	<ContentPage.Content>
 		<StackLayout VerticalOptions="Center">
-			<Editor Text="{Binding LifePoint1}" Keyboard="Numeric" Margin="0" IsVisible="{Binding Game.EnableLifePoint}" />
-			<Picker x:Name="ResultSelector"
-					Title="Select a match result"
-				SelectedItem="{Binding SelectedItem}"
-				ItemsSource="{Binding Items}"
-				ItemDisplayBinding="{Binding Name}">
-			</Picker>
-			<Editor Text="{Binding LifePoint2}" Keyboard="Numeric" Margin="0"  IsVisible="{Binding Game.EnableLifePoint}" />
-			<StackLayout Orientation="Horizontal" VerticalOptions="End">
-				<Button Text="Done" Command="{Binding DoneCommand}" HorizontalOptions="CenterAndExpand"></Button>
-			</StackLayout>
+			<Label Text="Enter the Result" />
+			<ListView x:Name="Results"
+					  SelectedItem="{Binding SelectedItem}"
+					  ItemsSource="{Binding Items}"
+					  ItemTapped="OnResultTapped">
+				<ListView.ItemTemplate>
+					<DataTemplate>
+						<TextCell Text="{Binding Name}" TextColor="Black" />
+					</DataTemplate>
+				</ListView.ItemTemplate>
+			</ListView>
+			<Editor Text="{Binding LifePoint1}" Keyboard="Numeric" IsVisible="{Binding EnableLifePoint}" />
+			<Editor Text="{Binding LifePoint2}" Keyboard="Numeric" IsVisible="{Binding EnableLifePoint}" />
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
