Added Timer, Round Title Async test

--- a/BSMM2/BSMM2/Views/RoundPage.xaml
+++ b/BSMM2/BSMM2/Views/RoundPage.xaml
@@ -10,6 +10,8 @@
 	</ContentPage.Resources>
 	<ContentPage.Content>
 		<StackLayout>
+			<Label Text="{Binding Count}" FontSize="40" HorizontalOptions="Center" />
+			<Label Text="{Binding Timer}" IsVisible="{Binding IsTimerVisible}" FontSize="40" HorizontalOptions="Center" />
 			<ListView x:Name="RoundListView"
 				ItemsSource="{Binding Matches}"
 				VerticalOptions="FillAndExpand"
