--- a/BSMM2/BSMM2/Views/PlayersPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayersPage.xaml
@@ -9,9 +9,11 @@
 		<local:ResultConverter x:Key="ResultConverter" />
 	</ContentPage.Resources>
 	<ContentPage.ToolbarItems>
-		<ToolbarItem Text="New Game" Clicked="NewGame_Clicked" Order="Secondary" />
+		<ToolbarItem Text="New Game" Command="{Binding NewGameCommand}" Order="Secondary" />
 		<ToolbarItem Text="Select Game" Command ="{Binding SelectGameCommand}" Order="Secondary" />
-		<ToolbarItem Text="AddPlayer" Clicked="AddPlayer_Clicked" Order="Secondary" />
+		<ToolbarItem Text="AddPlayer" Command="{Binding AddPlayerCommand}" Order="Secondary" />
+		<ToolbarItem Text="Export" Order="Secondary" />
+		<ToolbarItem Text="Help" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
 		<StackLayout>
