--- a/BSMM2/BSMM2/Views/NewGamePage.xaml
+++ b/BSMM2/BSMM2/Views/NewGamePage.xaml
@@ -36,7 +36,7 @@
 			<Editor Text="{Binding EntrySheet}" HeightRequest="256"  BackgroundColor="Aqua" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
 			<StackLayout Orientation="Horizontal">
 				<CheckBox IsChecked="{Binding EnableLifePoint}" />
-				<Label Text="Enable Life Point" VerticalOptions="Center" />
+				<Label Text="{Binding TextEnableLifePoint}" VerticalOptions="Center" />
 			</StackLayout>
 			<StackLayout Orientation="Horizontal">
 				<CheckBox IsChecked="{Binding AsCurrentGame}" />
