--- a/BSMM2/BSMM2/Views/NewGamePage.xaml
+++ b/BSMM2/BSMM2/Views/NewGamePage.xaml
@@ -35,7 +35,7 @@
 			<Label Text="Entry Sheet:" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
 			<Editor Text="{Binding EntrySheet}" HeightRequest="256"  BackgroundColor="Aqua" IsVisible="{Binding PlayerMode, Converter={StaticResource PlayerControlConverter},ConverterParameter=EntrySheet}" />
 			<StackLayout Orientation="Horizontal">
-				<CheckBox IsChecked="{Binding EnableLifePoint}" />
+				<CheckBox IsChecked="{Binding Rule.EnableLifePoint}" />
 				<Label Text="{Binding TextEnableLifePoint}" VerticalOptions="Center" />
 			</StackLayout>
 			<StackLayout Orientation="Horizontal">
