--- a/BSMM2/BSMM2/Models/Matches/SingleMatch/SingleMatchPage.xaml
+++ b/BSMM2/BSMM2/Models/Matches/SingleMatch/SingleMatchPage.xaml
@@ -5,19 +5,20 @@
 			 Title="{Binding Title}">
 	<ContentPage.Content>
 		<StackLayout VerticalOptions="Center">
+			<Label Text="{Binding LifePointTitle1}"  IsVisible="{Binding EnableLifePoint}" />
+			<Editor Text="{Binding LifePoint1}" Keyboard="Numeric" IsVisible="{Binding EnableLifePoint}" />
+			<Label Text="{Binding LifePointTitle2}"  IsVisible="{Binding EnableLifePoint}" />
+			<Editor Text="{Binding LifePoint2}" Keyboard="Numeric" IsVisible="{Binding EnableLifePoint}" />
 			<Label Text="Enter the Result" />
 			<ListView x:Name="Results"
 					  SelectedItem="{Binding SelectedItem}"
-					  ItemsSource="{Binding Items}"
-					  ItemTapped="OnResultTapped">
+					  ItemsSource="{Binding Items}">
 				<ListView.ItemTemplate>
 					<DataTemplate>
-						<TextCell Text="{Binding Name}" TextColor="Black" />
+						<TextCell Text="{Binding Label}" TextColor="Black" />
 					</DataTemplate>
 				</ListView.ItemTemplate>
 			</ListView>
-			<Editor Text="{Binding LifePoint1}" Keyboard="Numeric" IsVisible="{Binding Rule.EnableLifePoint}" />
-			<Editor Text="{Binding LifePoint2}" Keyboard="Numeric" IsVisible="{Binding Rule.EnableLifePoint}" />
 		</StackLayout>
 	</ContentPage.Content>
 </ContentPage>
