--- a/BSMM2/BSMM2/Views/PlayersPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayersPage.xaml
@@ -12,6 +12,7 @@
 		<ToolbarItem Text="New Game" Command="{Binding NewGameCommand}" Order="Secondary" />
 		<ToolbarItem Text="Rule" Command="{Binding RuleCommand}" Order="Secondary" />
 		<ToolbarItem Text="Select Game" Command ="{Binding SelectGameCommand}" Order="Secondary" />
+		<ToolbarItem Text="Delete Game" Command ="{Binding DeleteGameCommand}" Order="Secondary" />
 		<ToolbarItem Text="AddPlayer" Command="{Binding AddPlayerCommand}" Order="Secondary" />
 		<ToolbarItem Text="Export" Order="Secondary" />
 		<ToolbarItem Text="Help" Order="Secondary" />
