--- a/BSMM2/BSMM2/Models/Matches/SingleMatch/SingleMatchPage.xaml
+++ b/BSMM2/BSMM2/Models/Matches/SingleMatch/SingleMatchPage.xaml
@@ -7,17 +7,40 @@
 		<ToolbarItem Text="Back" Clicked="Back" Order="Secondary" />
 	</ContentPage.ToolbarItems>
 	<ContentPage.Content>
-		<StackLayout VerticalOptions="Center">
-			<Label Text="Enter the Result" />
-			<ListView x:Name="Results"
-					  SelectedItem="{Binding SelectedItem}"
-					  ItemsSource="{Binding Items}">
-				<ListView.ItemTemplate>
-					<DataTemplate>
-						<TextCell Text="{Binding Key}" TextColor="Black" />
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
-		</StackLayout>
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="*" />
+			</Grid.RowDefinitions>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
+			<Switch Grid.Row="0" Grid.Column="0" IsToggled="{Binding ResultItem.Player1Win}" />
+
+			<Picker IsVisible="{Binding EnableLifePoint}"
+				Grid.Row="0" Grid.Column="1"
+				ItemsSource ="{Binding LifePoints}"
+				SelectedItem="{Binding Player1LP}"
+				ItemDisplayBinding="{Binding Label}" />
+
+			<Label Text="{Binding Player1.Name}" Grid.Row="0" Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
+
+			<Switch Grid.Row="1" Grid.Column="0" IsToggled="{Binding ResultItem.Draw}" />
+			<Label Text="Draw" Grid.Row="1"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
+
+			<Switch IsToggled="{Binding ResultItem.Player2Win}" Grid.Row="2"  Grid.Column="0" />
+			<Picker IsVisible="{Binding EnableLifePoint}"
+				Grid.Row="2"  Grid.Column="1"
+				ItemsSource ="{Binding LifePoints}"
+				SelectedItem="{Binding Player2LP}"
+				ItemDisplayBinding="{Binding Label}" />
+			<Label Text="{Binding Player2.Name}" Grid.Row="2"  Grid.Column="2" FontSize="Medium" VerticalTextAlignment="Center" />
+			<Button Text="Done" Grid.Row="3" Grid.ColumnSpan="3" Command="{Binding DoneCommand}"  HorizontalOptions="FillAndExpand" />
+		</Grid>
 	</ContentPage.Content>
 </ContentPage>
