--- a/BSMM2/BSMM2/Views/RoundPage.xaml
+++ b/BSMM2/BSMM2/Views/RoundPage.xaml
@@ -25,7 +25,7 @@
 				<ListView.ItemTemplate>
 					<DataTemplate>
 						<ViewCell>
-							<StackLayout Padding="10">
+							<StackLayout Padding="10" BackgroundColor="{Binding Record1, Converter={StaticResource Converter}, ConverterParameter=BGCOLOR}">
 								<StackLayout Orientation="Horizontal"  HorizontalOptions="Start">
 									<Label Text="{Binding Record1, Converter={StaticResource Converter}}"
 									LineBreakMode="NoWrap"
