--- a/BSMM2/BSMM2/Views/PlayersPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayersPage.xaml
@@ -37,7 +37,7 @@
 									<Label Text="{Binding Order}" FontSize="16" />
 									<Label Text="{Binding Name}" FontSize="16" />
 								</StackLayout>
-								<Label Text="{Binding Result, Converter={StaticResource ResultConverter}}" FontSize="13" />
+								<Label Text="{Binding Result.Information}" FontSize="13" />
 							</StackLayout>
 						</ViewCell>
 					</DataTemplate>
