--- a/BSMM2/BSMM2/Views/RoundPage.xaml
+++ b/BSMM2/BSMM2/Views/RoundPage.xaml
@@ -25,9 +25,9 @@
 				<ListView.ItemTemplate>
 					<DataTemplate>
 						<ViewCell>
-							<StackLayout Padding="10" BackgroundColor="{Binding Record1, Converter={StaticResource Converter}, ConverterParameter=BGCOLOR}">
+							<StackLayout Padding="10" BackgroundColor="{Binding IsFinished, Converter={StaticResource Converter}, ConverterParameter=BGCOLOR}">
 								<StackLayout Orientation="Horizontal"  HorizontalOptions="Start">
-									<Label Text="{Binding Record1, Converter={StaticResource Converter}}"
+									<Label Text="{Binding Record1, Converter={StaticResource Converter}, ConverterParameter=RESULTMARK}"
 									LineBreakMode="NoWrap"
 									FontSize="20" />
 									<Label Text="{Binding Record1.Player.Name}"
@@ -38,7 +38,7 @@
 									<Label Text="{Binding Record2.Player.Name}"
 									LineBreakMode="NoWrap"
 									FontSize="20" />
-									<Label Text="{Binding Record2, Converter={StaticResource Converter}}"
+									<Label Text="{Binding Record2, Converter={StaticResource Converter}, ConverterParameter=RESULTMARK}"
 									LineBreakMode="NoWrap"
 									FontSize="20" />
 								</StackLayout>
