--- a/BSMM2/BSMM2/Views/PlayerPage.xaml
+++ b/BSMM2/BSMM2/Views/PlayerPage.xaml
@@ -29,7 +29,7 @@
 						<ViewCell>
 							<StackLayout Padding="10">
 								<StackLayout Orientation="Horizontal"  HorizontalOptions="Start">
-									<Label Text="{Binding Record1, Converter={StaticResource Converter}}"
+									<Label Text="{Binding Record1, Converter={StaticResource Converter}, ConverterParameter=RESULTMARK}"
 									LineBreakMode="NoWrap"
 									FontSize="20" />
 									<Label Text="{Binding Record1.Player.Name}"
@@ -40,7 +40,7 @@
 									<Label Text="{Binding Record2.Player.Name}"
 									LineBreakMode="NoWrap"
 									FontSize="20" />
-									<Label Text="{Binding Record2, Converter={StaticResource Converter}}"
+									<Label Text="{Binding Record2, Converter={StaticResource Converter}, ConverterParameter=RESULTMARK}"
 									LineBreakMode="NoWrap"
 									FontSize="20" />
 								</StackLayout>
