CreateRulePage Added Auto Save points

--- a/BSMM2/BSMM2/Models/Matches/SingleMatch/SingleMatchRulePage.xaml
+++ b/BSMM2/BSMM2/Models/Matches/SingleMatch/SingleMatchRulePage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-			 x:Class="BSMM2.Views.RulePage"
-			 xmlns:local="clr-namespace:BSMM2.ViewModels"
+			 x:Class="BSMM2.Models.Matches.SingleMatch.SingleMatchRulePage"
+			 Disappearing="OnClosing"
 			 Title="{Binding Name}">
 	<ContentPage.ToolbarItems>
 		<ToolbarItem Text="Back" Clicked="Back" Order="Secondary" />
@@ -11,11 +11,15 @@
 		<StackLayout>
 			<StackLayout Orientation="Horizontal">
 				<Label Text="AcceptByeMatchDuplication" VerticalOptions="Center" />
-				<CheckBox IsChecked="{Binding AcceptByeMatchDuplication}" />
+				<CheckBox IsChecked="{Binding Game.AcceptByeMatchDuplication}" />
 			</StackLayout>
 			<StackLayout Orientation="Horizontal">
 				<Label Text="AcceptGapMatchDuplication" VerticalOptions="Center" />
-				<CheckBox IsChecked="{Binding AcceptGapMatchDuplication}" />
+				<CheckBox IsChecked="{Binding Game.AcceptGapMatchDuplication}" />
+			</StackLayout>
+			<StackLayout Orientation="Horizontal">
+				<Label Text="Minimum Comparison" VerticalOptions="Center" />
+				<CheckBox IsChecked="{Binding Rule.MinimumComparison}" />
 			</StackLayout>
 		</StackLayout>
 	</ContentPage.Content>
